--- a/1.md
+++ b/1.md
@@ -1,5 +1,5 @@
-**a**
-public class l {
+
+`<public class l {
 public static void main(String[] args) {
 	int a=11;
 	System.out.println(a);
@@ -7,7 +7,7 @@ public static void main(String[] args) {
 	System.out.println(b);
 	System.out.println(a);
 }
-}
+}>`
 
 b=a++
 (
