--- a/1.md
+++ b/1.md
@@ -1,5 +1,5 @@
 
-`<public class l {
+`public class l {
 public static void main(String[] args) {
 	int a=11;
 	System.out.println(a);
@@ -7,7 +7,7 @@ public static void main(String[] args) {
 	System.out.println(b);
 	System.out.println(a);
 }
-}>`
+}`
 
 b=a++
 (
@@ -15,7 +15,7 @@ b=a;
 a++
 )
 //
-
+	    
 int c=20;
 	switch(c)
 	{
@@ -28,7 +28,9 @@ int c=20;
 		break;
 	default:
 		System.out.println("不知道");
-	}  输出  星期二  星期三
+	}  
+		    
+	输出  星期二  星期三
 	switch 会一个接一个的执行  要遇到break才会跳出
 	switch 中 条件表达式中的数据类型
   要和case 后的 常量表达式一致  否则会出错
