--- a/1.md
+++ b/1.md
@@ -1,11 +1,12 @@
 
 `public class l {
-public static void main(String[] args) {
-int a=11;
-System.out.println(a);
-int b=a++;
-System.out.println(b);
-System.out.println(a);
+public static void main(String[] args) 
+{
+	int a=11;
+	System.out.println(a);
+	int b=a++;
+	System.out.println(b);
+	System.out.println(a);
 }
 }`
 
