--- a/1.md
+++ b/1.md
@@ -1,14 +1,12 @@
-
-`public class l {
-public static void main(String[] args) 
-{ 
-	int a=11;  
-	System.out.println(a);  
-	int b=a++; 
-	System.out.println(b); 
-	System.out.println(a); 
-} 
-}` 
+public class l {
+	public static void main(String[] args) { 
+		int a=11;  
+		System.out.println(a);  
+		int b=a++; 
+		System.out.println(b); 
+		System.out.println(a); 
+	} 
+}
 
 b=a++
 (
@@ -48,7 +46,7 @@ int c=20;
 		}
 		System.out.println();
 	}
-	 *
+   *
   ***
  *****
 *******
