--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-public class l {
+`public class l {
 	public static void main(String[] args) { 
 		int a=11;  
 		System.out.println(a);  
@@ -6,7 +6,7 @@ public class l {
 		System.out.println(b); 
 		System.out.println(a); 
 	} 
-}
+}`
 
 b=a++
 (
