--- a/1.md
+++ b/1.md
@@ -31,10 +31,11 @@ a++
 	输出  星期二  星期三
 	switch 会一个接一个的执行  要遇到break才会跳出
 	switch 中 条件表达式中的数据类型
-  要和case 后的 常量表达式一致  否则会出错
-  switch中的可用数据类型主要是：
-  允许byte  short  int char enum等；float类型会损失精度出错
-//
+	要和case 后的 常量表达式一致  否则会出错
+	switch中的可用数据类型主要是：
+	允许byte  short  int char enum等；
+	float类型会损失精度出错
+
 
 	for(int i=1;i<5;i++){
 		for(int k=1;k<5-i;k++){
@@ -46,10 +47,10 @@ a++
 		}
 		System.out.println();
 	}
-   *
-  ***
- *****
-*******
+	   *
+	  ***
+	 *****
+	*******
 //
 
 	
