--- a/1.md
+++ b/1.md
@@ -13,7 +13,7 @@ b=a++
 b=a;
 a++
 )
-//
+
 	    
 	int c=20;
 		switch(c)
@@ -29,9 +29,9 @@ a++
 			System.out.println("不知道");
 		}  
 	输出  星期二  星期三
-	switch 会一个接一个的执行  要遇到break才会跳出
+	**switch 会一个接一个的执行  要遇到break才会跳出
 	switch 中 条件表达式中的数据类型
-	要和case 后的 常量表达式一致  否则会出错
+	要和case 后的 常量表达式一致  否则会出错**
 	switch中的可用数据类型主要是：
 	允许byte  short  int char enum等；
 	float类型会损失精度出错
