--- a/类和对象.md
+++ b/类和对象.md
@@ -3,7 +3,7 @@
 	  String name;
 	  String color;
 	}
-	**Cat cat1=new Cat()**创建对象
+**	Cat cat1=new Cat()创建对象**
 	cat1.age=3;
 	cat1.color="red";
 	cat1.name="xy";
