--- a/类和对象.md
+++ b/类和对象.md
@@ -13,8 +13,8 @@
 	cat1.color="red";
 	cat1.name="xy";
 	
-**先声明在创建**
-·对象声明：类名 对象名
-对象创建：对象名=new 类名（）·
+**先声明在创建** 
+对象声明：类名 对象名  
+对象创建：对象名=new 类名（） 
 
 
