--- a/类和对象.md
+++ b/类和对象.md
@@ -19,5 +19,27 @@
 **一步创建**  
 类名 对象名=new 类名()  
 
+**对象声明不会占用内存空间**  
+**对象创建才会占用内存空间**  
+		Person a=new Person();  
+		a.age=12;  
+		a.name="小明";  
+		Person b;  
+		b=a;  
+		System.out.println(b.age);  
+		Person c;  
+		c=b;  
+		System.out.println(c.age);  
+		c.age=66;  
+		System.out.println(a.age);  
+		System.out.println(b.age);  
+		System.out.println(c.age);  
+输出结果  
+12   12  
+66  66  66  
+b=a 只是传递了地址，并没创建新的内存空间  
+
+
+	
 
 
