--- a/类和对象.md
+++ b/类和对象.md
@@ -39,6 +39,56 @@
 66  66  66  
 b=a 只是传递了地址，并没创建新的内存空间  
 
+**成员方法**  
+
+	public int add2(int num1,int num2){
+		return num1+num2;
+	}  
+	
+成员方法的返回类型和返回结果的类型要一致  
+在调用成员方法时，给出的具体数值个数要和类型相匹配  
+
+**构造方法**  
+
+	class Person{
+		int age;
+		String name;
+		//构造方法
+		public Person(int age,String name){
+			age=age;
+			name=name;
+		}
+		public Person(int age){
+			age=age;
+		}
+	｝
+构造方法名和类名相同  
+构造方法没有返回值  
+主要作用是初始化成员变量  
+在创建新对象时系统自动调用构造方法  
+一个类可以有多个构造方法  
+每个类都有一个默认的构造方法  
+
+**this指针**  
+this是某个对象的，而不是一个类的  
+this只能在类定义中使用，不能在类外用  
+**static**  
+
+	class Child{
+		int age;
+		String name;
+		static int total=0;
+		public Child(int age,String name){
+		this.age=age;
+		this.name=name;
+		total++;
+		}
+	}
+
+static修饰的变量是静态变量，可以被任何一个对象访问  
+可以由类名进行访问，如Child.total  
+
+
 
 	
 
