--- a/类和对象.md
+++ b/类和对象.md
@@ -89,7 +89,43 @@ static修饰的变量是静态变量，可以被任何一个对象访问
 可以由类名进行访问，如Child.total  
 
 
+	public class l {
+		static int i=1;
+		static{
+			System.out.println("a");
+			i++;
+		}
+		public l(){
+			System.out.println("b");
+			i++;
+		}
+	public static void main(String[] args) {
+		}
+	}
+输出结果:a  
 
+**该静态区域快，只执行一次**  
+**即使没有创建一个对象，也会执行**  
+
+	class Person{
+		int age;
+		String name;
+		static int total;
+		public Person(int age,String name,int total){
+			this.age=age;
+			this.name=name;
+			this.total=total;
+		}
+		public static int getTotal(){
+			age++;//这是错的
+			return total;
+		}
 	
+	}
+静态方法(static)只能访问静态变量  
+非静态方法可以访问静态变量  
+
+
+
 
 
