--- a/类和对象.md
+++ b/类和对象.md
@@ -62,6 +62,8 @@ b=a 只是传递了地址，并没创建新的内存空间
 			age=age;
 		}
 	｝
+
+
 构造方法名和类名相同  
 构造方法没有返回值  
 主要作用是初始化成员变量  
@@ -122,10 +124,36 @@ static修饰的变量是静态变量，可以被任何一个对象访问
 		}
 	
 	}
+
+
 静态方法(static)只能访问静态变量  
 非静态方法可以访问静态变量  
 
+**访问级别的访问范围**  
+
+访问级别|访问控制修饰符|同类|同包|子类|不同包
+--------|--------------|----|----|----|-----
+公开    |   public     | √  |  √ |  √ |  √  
+受保护  |   protected  | √  |  √ |  √ |  x  
+默认    |   没有修饰符 | √  |  √ |  x |  x
+私有    |   private    | √  |  x |  x |  x    
 
 
+**方法重载-注意事项**  
+方法名相同  
+方法的参数类型，个数，顺序至少有一个不同  
+public int getmax(int i,int j)  
+public float getmax(float a,float b)  
+public float getmax(double a,float b)  
+public float getmax(float a,double b)  
+
+方法返回类型可以不同  
+如果**只是**返回类型不一样.**不**能够进行重载,例子如下：  
+public float getmax(float a,float b)  
+public double getmax(float a,float b)X  
+方法的修饰符可以不同  
+如果**只是**返回类型不一样.**不**能够进行重载，例子如下：
+public float getmax(float a,float b)  
+protect float getmax(float a,float b)X  
 
 
