--- a/基本的语句.md
+++ b/基本的语句.md
@@ -7,14 +7,10 @@
 		System.out.println(a); 
 	} 
 
-
-b=a++
-(
-b=a;
-a++
-)
-
-	    
+b=a++ 
+b=a;a++  
+先赋值，再加一  
+***
 	int c=20;
 		switch(c)
 		{
@@ -34,8 +30,10 @@ a++
 	要和case 后的 常量表达式一致  否则会出错**
 	switch中的可用数据类型主要是：
 	允许byte  short  int char enum等；
-	float类型会损失精度出错
+	float类型会损失精度出错  
 
+
+***
 
 	for(int i=1;i<5;i++){
 		for(int k=1;k<5-i;k++){
@@ -51,6 +49,55 @@ a++
 	  ***
 	 *****
 	*******
+	
+***
+**break**  
+break用于switch语句作用是结束一个switch语句  
+break用于循环语句的作用是结束当前所在的循环语句  
+
+	public class l {
+	public static void main(String[] args){
+		outer:for(int j=0;j<3;j++){	
+			for(int i=0;i<5;i++){
+				System.out.println("halo");
+				break outer;//直接退出循环
+				}
+			}
+		}
+	}  
+输出结果为：halo  
+外循环退出，里面的也不会继续执行  
+break位于内层循环，可通过命名来作用于外层循环  
+***
+**continue**  
+continue的使用范围：continue只能用于循环语句  
+contienu的作用:跳过**本次**的循环体内容,继续下一次.  
+
+	public class l {  
+	public static void main(String[] args){  
+			for(int i=0;i<5;i++){  
+				if(i==2){  
+					continue;  
+				}  
+				System.out.println("这是第"+i);  
+				}  
+		}  
+	}  
+**不会**输出:这是第2  
+
+	public class l {  
+	public static void main(String[] args){  
+			out:for(int j=0;j<3;j++){  
+			for(int i=0;i<5;i++){  
+				System.out.println("hello");  
+				continue out;  
+				}  
+			}  
+		}  
+	}
+
+
+会输出3次hello  
 
 
 
