--- a/基本的语句.md
+++ b/基本的语句.md
@@ -24,13 +24,17 @@ b=a;a++
 		default:
 			System.out.println("不知道");
 		}  
-	输出  星期二  星期三
-	**switch 会一个接一个的执行  要遇到break才会跳出
-	switch 中 条件表达式中的数据类型
-	要和case 后的 常量表达式一致  否则会出错**
-	switch中的可用数据类型主要是：
-	允许byte  short  int char enum等；
-	float类型会损失精度出错  
+		
+输出  星期二  星期三
+**switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
+执行完毕后如果没有遇到break关键字或者是结束switch的大括号  
+那么switch不会再判断,按照代码顺序从上到下执行所有代码  
+case后要跟常量  
+switch 中 条件表达式中的数据类型
+要和case 后的 常量表达式一致  否则会出错**
+switch中的可用数据类型主要是：
+允许byte  short  int char enum等；
+float类型会损失精度出错  
 
 
 ***
@@ -96,8 +100,9 @@ contienu的作用:跳过**本次**的循环体内容,继续下一次.
 		}  
 	}
 
-
 会输出3次hello  
+continue直接跳过当前外层循环 内层循环也不继续执行  
+
 
 
 
