--- a/基本的语句.md
+++ b/基本的语句.md
@@ -26,12 +26,13 @@ b=a;a++
 		}  
 		
 输出  星期二  星期三
-**switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
+
+switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
 执行完毕后如果没有遇到break关键字或者是结束switch的大括号  
-那么switch不会再判断,按照代码顺序从上到下执行所有代码  
+那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
 case后要跟常量  
 switch 中 条件表达式中的数据类型
-要和case 后的 常量表达式一致  否则会出错**
+要和case 后的 常量表达式一致  否则会出错
 switch中的可用数据类型主要是：
 允许byte  short  int char enum等；
 float类型会损失精度出错  
