--- a/基本的语句.md
+++ b/基本的语句.md
@@ -14,6 +14,8 @@ b=a;a++
 	int c=20;
 		switch(c)
 		{
+		default:
+			System.out.println("不知道");
 		case 10:
 			System.out.println("今天星期一");
 		case 20:
@@ -21,8 +23,7 @@ b=a;a++
 		case 30:
 			System.out.println("星期三");
 			break;
-		default:
-			System.out.println("不知道");
+		
 		}  
 		
 输出  星期二  星期三
@@ -30,6 +31,8 @@ b=a;a++
 switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
 执行完毕后如果没有遇到break关键字或者是结束switch的大括号  
 那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
+如果把default放到最上面,那么会依次执行  
+如果c=80,会输出:不知道 今天星期一等等  
 case后要跟常量  
 switch 中 条件表达式中的数据类型
 要和case 后的 常量表达式一致  否则会出错
@@ -103,6 +106,13 @@ contienu的作用:跳过**本次**的循环体内容,继续下一次.
 
 会输出3次hello  
 continue直接跳过当前外层循环 内层循环也不继续执行  
+
+**return**
+如果一个函数的返回值类型是具体的数据类型  
+那么该函数就必须保证在任意情况下都要有返回值  
+return的作用:  
+1.返回数据给函数的调用者  
+2.函数一旦执行到了return关键字,那么该函数**马上结束**.  
 
 
 
