Update and rename 数组 to 数组.md

--- a/数组.md
+++ b/数组.md
@@ -1,4 +1,5 @@
 数组的定义格式:  
+数据类型[] 变量名 = new 数据类型[长度]  
 **栈内存**的特点:栈内存存储的都是**局部变量**,变量一旦出了自己的作用域  
 那么马上会从内存中消失,释放内存空间.  
 凡是以new关键字创建的对象,jvm都会在堆内存中开辟一个新的空间,创建一个新的对象  
