--- a/数组.md
+++ b/数组.md
@@ -14,3 +14,51 @@
 ***
 局部变量:如果一个变量是在一个方法(函数)的内部声明的,那么该变量就是一个局部变量  
 成员变量:成员变量就是定义在方法之外,类之内的变量  
+***
+选择排序  
+  public static void xz(int []arr){
+  
+	  	for(int i=0;i<arr.length-1;i++){
+	  	
+		  	for(int j=i+1;j<arr.length;j++){
+		  	
+		  		if(arr[i]>arr[j]){
+		  			int temp=arr[i];
+		  			arr[i]=arr[j];
+		  			arr[j]=temp;
+		  		}
+		  	}
+	  	}
+	  	for(int i=0;i<arr.length;i++){
+	  		System.out.print(arr[i]+",");
+	  	}
+  	}
+这是一个从小到大的排序,i是选择的位置,先从第一个位置开始,依次和后面的数进行比较,如果  
+第一个数比第二数大,就交换位置,否则和第三个数比,一直比到最后一个数,这样可以把最小的  
+数放到第一个位置,然后再从第二个位置开始,依此类推.  
+
+
+
+冒泡排序  
+  public static void mp(int[]arr){
+  			for(int j=0;j<arr.length-1;j++){
+	  			
+	  			for(int i=0;i<arr.length-1-j;i++){
+	  			if(arr[i]>arr[i+1]){
+	  				int temp=arr[i];
+	  				arr[i]=arr[i+1];
+	  				arr[i+1]=temp;
+	  			}
+	  		
+	  		}
+	  	}
+  		for(int i=0;i<arr.length;i++){
+  		System.out.print(arr[i]+",");
+	  	}
+	  }
+这是一个从小到大的排序,i是从第一个数开始,依次比较,如果比第二个数大,就交换位置  
+这样可以找出一个最大值,放到数组的最后一个位置  
+j是控制比较的轮数,由于把最大值找到了,就可以少比较一轮  
+
+
+  
