--- a/数组.md
+++ b/数组.md
@@ -59,6 +59,43 @@
 这是一个从小到大的排序,i是从第一个数开始,依次比较,如果比第二个数大,就交换位置  
 这样可以找出一个最大值,放到数组的最后一个位置  
 j是控制比较的轮数,由于把最大值找到了,就可以少比较一轮  
+***
+
+二分法查找  
+
+适用于排好序的数组,检索目标数所在的位置  
+
+
+	public static int half(int[]arr,int target){
+			int min=0;
+			int max=arr.length-1;
+			int mid=(min+max)/2;
+			while(true){
+				if(target==arr[mid]){
+					return mid;
+				}
+				if(target>arr[mid])
+				{
+				min=mid+1;
+				mid=(min+max)/2;
+				}
+				if(target<arr[mid]){
+				max=mid-1;
+				mid=(min+max)/2;
+				}
+				if(min>max){
+				break;
+				}
+		
+			}
+			return -1;
+		}
+
+
+设置三个数min,mid,max,让目标数字与数组中间的数进行比较  
+如果目标数大于数组中间的数字,就让min变成mid+1,然后继续寻找,直到找到为止,得到一个返回值  
+如果目标数小于数组中间的数字,就让max变成mid-1  
+如果找不到,会出现min>max,这时候break跳出循环,然后返回值是-1  
 
 
   
