--- a/数组.md
+++ b/数组.md
@@ -3,6 +3,12 @@
 数据类型[] 变量名 = new 数据类型[长度]  
 静态初始化:
 数据类型[] 变量名 ={元素1,元素2...}  
+数组的特点:  
+1.数组只能存储同一种数据类型的数据.  
+2.数组是会给存储到数组中的元素分配一个索引值的,索引值从0开始,最大是length-1.  
+3.数组一旦初始化,长度固定.  
+4.数组中的元素与元素之间的内存地址是连续的.  
+
 ***
 **栈内存**的特点:栈内存存储的都是**局部变量**,变量一旦出了自己的作用域  
 那么马上会从内存中消失,释放内存空间.  
