--- a/基本的语句.md
+++ b/基本的语句.md
@@ -1,11 +1,10 @@
-	
-`public static void main(String[] args) { 
-	int a=11;  
-	System.out.println(a);  
-	int b=a++; 
-	System.out.println(b); 
-	System.out.println(a); 
-	} `
+`public static void main(String[] args) { `
+    `int a=11;`
+    `System.out.println(a);`
+	`int b=a++; `
+	`System.out.println(b);`
+	`System.out.println(a); `
+	`}`
 
 b=a++ 
 b=a;a++  
