--- a/基本的语句.md
+++ b/基本的语句.md
@@ -1,19 +1,21 @@
-`public static void main(String[] args) { `
-	`int a=11;`
-	`System.out.println(a);`
-	`int b=a++;`  
-	`System.out.println(b);`
-	`System.out.println(a);`
-	`}`  
+#1.基本语句  
+##1.1赋值  
+	public static void main(String[] args) {
+		int a = 11;
+		System.out.println(a);
+		int b = a++;
+		System.out.println(b);
+		System.out.println(a);
+	}
 
-b=a++ 
-b=a;a++  
+b = a++ 
+b = a;a++  
 先赋值，再加一  
 ***
-	int c=20;
+	int c = 20;
 		switch(c)
 		{
-		default:
+		default :
 			System.out.println("不知道");
 		case 10:
 			System.out.println("今天星期一");
@@ -21,10 +23,10 @@ b=a;a++
 			System.out.println("星期二");
 		case 30:
 			System.out.println("星期三");
-			break;
+			break ;
 		
 		}  
-		
+
 输出  星期二  星期三
 
 switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
