--- a/基本的语句.md
+++ b/基本的语句.md
@@ -1,17 +1,19 @@
+
 #1.基本语句  
 ##1.1赋值  
-	public static void main(String[] args) {
-		int a = 11;
-		System.out.println(a);
-		int b = a++;
-		System.out.println(b);
-		System.out.println(a);
-	}
+    public static void main(String[] args) {
+        int a = 11;
+        System.out.println(a);
+        int b = a++;
+        System.out.println(b);
+        System.out.println(a);
+    }
 
-b = a++ 
+b = a++  
 b = a;a++  
 先赋值，再加一  
 ***
+##1.2switch  
 	int c = 20;
 		switch(c)
 		{
@@ -24,10 +26,9 @@ b = a;a++
 		case 30:
 			System.out.println("星期三");
 			break ;
-		
 		}  
 
-输出  星期二  星期三
+输出:星期二,星期三  
 
 switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
 执行完毕后如果没有遇到break关键字或者是结束switch的大括号  
