--- a/基本的语句.md
+++ b/基本的语句.md
@@ -13,25 +13,24 @@ b = a++
 b = a;a++  
 先赋值，再加一  
 ***
-##1.2switch  
-	int c = 20;
-		switch(c)
-		{
-		default :
-			System.out.println("不知道");
-		case 10:
-			System.out.println("今天星期一");
-		case 20:
-			System.out.println("星期二");
-		case 30:
-			System.out.println("星期三");
-			break ;
-		}  
+##1.2switch语句  
+    int c = 20;
+        switch(c)
+        {
+        default :
+            System.out.println("不知道");
+        case 10:
+            System.out.println("今天星期一");
+        case 20:
+            System.out.println("星期二");
+        case 30:
+            System.out.println("星期三");
+        break ;
+    }  
 
 输出:星期二,星期三  
 
-switch一旦匹配上了其中一个case,那么就会执行对应的case中语句  
-执行完毕后如果没有遇到break关键字或者是结束switch的大括号  
+**switch**一旦匹配上了其中一个**case**,那么就会执行对应的**case**中语句,执行完毕后如果没有遇到**break**关键字或者是结束  **switch**的大括号  
 那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
 如果把default放到最上面,那么会依次执行  
 如果c=80,会输出:不知道 今天星期一等等  
@@ -41,10 +40,8 @@ switch 中 条件表达式中的数据类型
 switch中的可用数据类型主要是：
 允许byte  short  int char enum等；
 float类型会损失精度出错  
-
-
 ***
-
+##for语句
 	for(int i=1;i<5;i++){
 		for(int k=1;k<5-i;k++){
 		System.out.print(" ");
