--- a/基本的语句.md
+++ b/基本的语句.md
@@ -30,16 +30,11 @@ b = a;a++
 
 输出:星期二,星期三  
 
-**switch**一旦匹配上了其中一个**case**,那么就会执行对应的**case**中语句,执行完毕后如果没有遇到**break**关键字或者是结束  **switch**的大括号  
-那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
-如果把default放到最上面,那么会依次执行  
-如果c=80,会输出:不知道 今天星期一等等  
-case后要跟常量  
-switch 中 条件表达式中的数据类型
-要和case 后的 常量表达式一致  否则会出错
-switch中的可用数据类型主要是：
-允许byte  short  int char enum等；
-float类型会损失精度出错  
+1.**switch**一旦匹配上了其中一个**case**,那么就会执行对应的**case**中语句,执行完毕后如果没有遇到**break**关键字或者是结束  **switch**的大括号,那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
+2.如果把**default**放到最上面,那么会依次执行,如果c=80,会输出:不知道 今天星期一等等  
+3.**case**后要跟常量.  
+4**switch**中条件表达式中的数据类型要和**case**后的常量表达式一致,否则会出错.  
+5**switch**中的可用数据类型主要是：允许byte,short,int,char,enum等;float类型会损失精度出错.  
 ***
 ##for语句
 	for(int i=1;i<5;i++){
