--- a/基本的语句.md
+++ b/基本的语句.md
@@ -30,78 +30,76 @@ b = a;a++
 
 输出:星期二,星期三  
 
-1.**switch**一旦匹配上了其中一个**case**,那么就会执行对应的**case**中语句,执行完毕后如果没有遇到**break**关键字或者是结束  **switch**的大括号,那么switch**不会再判断**,按照代码顺序从上到下执行所有代码  
-2.如果把**default**放到最上面,那么会依次执行,如果c=80,会输出:不知道 今天星期一等等  
-3.**case**后要跟常量.  
-4**switch**中条件表达式中的数据类型要和**case**后的常量表达式一致,否则会出错.  
-5**switch**中的可用数据类型主要是：允许byte,short,int,char,enum等;float类型会损失精度出错.  
+1.switch一旦匹配上了其中一个case,那么就会执行对应的case中语句,执行完毕后如果没有遇到break关键字或者是结束switch的大括号,那么switch不会再判断,按照代码顺序从上到下执行所有代码  
+2.如果把default放到最上面,那么会依次执行,如果c=80,会输出:不知道 今天星期一等等  
+3.case后要跟常量.  
+4switch中条件表达式中的数据类型要和case后的常量表达式一致,否则会出错.  
+5switch中的可用数据类型主要是：允许byte,short,int,char,enum等;float类型会损失精度出错.  
 ***
-##for语句
-	for(int i=1;i<5;i++){
-		for(int k=1;k<5-i;k++){
-		System.out.print(" ");
-		}
-		for (int l=1;l<=2*i-1;l++){
-			
-			System.out.print("*");
-		}
-		System.out.println();
-	}
+##1.3for语句
+    for(int i = 1;i < 5;i++){
+        for(int k = 1;k < 5 - i;k++){
+        System.out.print(" ");
+        }
+        for (int l = 1;l <= 2 * i - 1;l++){
+        System.out.print("*");
+        }
+        System.out.println();
+    }
+输出:  
 	   *
 	  ***
 	 *****
-	*******
+	*******  
+
 	
 ***
-**break**  
-break用于switch语句作用是结束一个switch语句  
-break用于循环语句的作用是结束当前所在的循环语句  
-
-	public class l {
-	public static void main(String[] args){
-		outer:for(int j=0;j<3;j++){	
-			for(int i=0;i<5;i++){
-				System.out.println("halo");
-				break outer;//直接退出循环
-				}
-			}
-		}
-	}  
+##1.4break
+    public class l {
+    public static void main(String[] args){
+        outer:for (int j = 0;j < 3;j++){	
+            for (int i = 0;i < 5;i++){
+            System.out.println("halo");
+            break outer;//直接退出循环
+                }
+            }
+        }
+    }  
 输出结果为：halo  
 外循环退出，里面的也不会继续执行  
 break位于内层循环，可通过命名来作用于外层循环  
+break作用:  
+1.break用于switch语句作用是结束一个switch语句  
+2.break用于循环语句的作用是结束当前所在的循环语句 
 ***
-**continue**  
-continue的使用范围：continue只能用于循环语句  
+##1.5continue  
+continue的使用范围:continue只能用于循环语句  
 contienu的作用:跳过**本次**的循环体内容,继续下一次.  
-
-	public class l {  
-	public static void main(String[] args){  
-			for(int i=0;i<5;i++){  
-				if(i==2){  
-					continue;  
-				}  
-				System.out.println("这是第"+i);  
-				}  
-		}  
-	}  
+    public class l {  
+    public static void main(String[] args){  
+            for(int i=0;i<5;i++){  
+                if(i==2){  
+                    continue;  
+                }  
+                System.out.println("这是第"+i);  
+                }  
+        }  
+    }  
 **不会**输出:这是第2  
-
-	public class l {  
-	public static void main(String[] args){  
-			out:for(int j=0;j<3;j++){  
-			for(int i=0;i<5;i++){  
-				System.out.println("hello");  
-				continue out;  
-				}  
-			}  
-		}  
-	}
-
+    public class l {  
+    public static void main(String[] args){  
+            out:for(int j=0;j<3;j++){  
+            for(int i=0;i<5;i++){  
+                System.out.println("hello");  
+                continue out;  
+                }  
+            }  
+        }  
+    }
 会输出3次hello  
 continue直接跳过当前外层循环 内层循环也不继续执行  
-
-**return**
+***
+##1.6return
 如果一个函数的返回值类型是具体的数据类型  
 那么该函数就必须保证在任意情况下都要有返回值  
 return的作用:  
