--- a/基本的语句.md
+++ b/基本的语句.md
@@ -1,6 +1,7 @@
 
 #1.基本语句  
 ##1.1赋值  
+
     public static void main(String[] args) {
         int a = 11;
         System.out.println(a);
@@ -14,6 +15,7 @@ b = a;a++
 先赋值，再加一  
 ***
 ##1.2switch语句  
+
     int c = 20;
         switch(c)
         {
@@ -37,6 +39,7 @@ b = a;a++
 5switch中的可用数据类型主要是：允许byte,short,int,char,enum等;float类型会损失精度出错.  
 ***
 ##1.3for语句
+
     for(int i = 1;i < 5;i++){
         for(int k = 1;k < 5 - i;k++){
         System.out.print(" ");
@@ -55,6 +58,7 @@ b = a;a++
 	
 ***
 ##1.4break
+
     public class l {
     public static void main(String[] args){
         outer:for (int j = 0;j < 3;j++){	
@@ -65,6 +69,7 @@ b = a;a++
             }
         }
     }  
+
 输出结果为：halo  
 外循环退出，里面的也不会继续执行  
 break位于内层循环，可通过命名来作用于外层循环  
@@ -75,17 +80,19 @@ break作用:
 ##1.5continue  
 continue的使用范围:continue只能用于循环语句  
 contienu的作用:跳过**本次**的循环体内容,继续下一次.  
+
     public class l {  
     public static void main(String[] args){  
-            for(int i=0;i<5;i++){  
-                if(i==2){  
-                    continue;  
+        for(int i=0;i<5;i++){  
+            if(i==2){  
+                continue;  
                 }  
                 System.out.println("这是第"+i);  
                 }  
         }  
     }  
 **不会**输出:这是第2  
+
     public class l {  
     public static void main(String[] args){  
             out:for(int j=0;j<3;j++){  
@@ -97,11 +104,10 @@ contienu的作用:跳过**本次**的循环体内容,继续下一次.
         }  
     }
 会输出3次hello  
-continue直接跳过当前外层循环 内层循环也不继续执行  
+continue直接跳过当前外层循环,内层循环也不继续执行  
 ***
 ##1.6return
-如果一个函数的返回值类型是具体的数据类型  
-那么该函数就必须保证在任意情况下都要有返回值  
+如果一个函数的返回值类型是具体的数据类型,那么该函数就必须保证在任意情况下都要有返回值  
 return的作用:  
 1.返回数据给函数的调用者  
 2.函数一旦执行到了return关键字,那么该函数**马上结束**.  
