--- a/2.数组.md
+++ b/2.数组.md
@@ -9,8 +9,8 @@
 3.数组一旦初始化,长度固定.  
 4.数组中的元素与元素之间的内存地址是连续的.  
 ***
-**栈内存**的特点:栈内存存储的都是**局部变量**,变量一旦出了自己的作用域,那么马上会从内存中消失,释放内存空间.凡是以new关键字创建的对象,jvm都会在堆内存中开辟一个新的空间,创建一个新的对象  
-**堆内存**的特点:堆内存存储的都是**对象数据**,对象一旦被使用完,并不会马上从内存中消失,而是等待垃圾回收器不定时把垃圾对象回收,这时候该对象才会消失,释放内存.  
+栈内存的特点:栈内存存储的都是局部变量,变量一旦出了自己的作用域,那么马上会从内存中消失,释放内存空间.凡是以new关键字创建的对象,jvm都会在堆内存中开辟一个新的空间,创建一个新的对象  
+堆内存的特点:堆内存存储的都是对象数据,对象一旦被使用完,并不会马上从内存中消失,而是等待垃圾回收器不定时把垃圾对象回收,这时候该对象才会消失,释放内存.  
 对象如果没有变量引用了,那么该对象就是一个垃圾对象.  
 局部变量:如果一个变量是在一个方法(函数)的内部声明的,那么该变量就是一个局部变量  
 成员变量:成员变量就是定义在方法之外,类之内的变量  
