--- a/2.数组.md
+++ b/2.数组.md
@@ -1,7 +1,7 @@
 #2.数组
 ##2.1数组的定义格式:  
 动态初始化:数据类型[] 变量名 = new 数据类型[长度]  
-静态初始化:数据类型[] 变量名 ={元素1,元素2...}  
+静态初始化:数据类型[] 变量名 = {元素1,元素2...}  
 ***
 ##2.2数组的特点:  
 1.数组只能存储同一种数据类型的数据.  
@@ -18,16 +18,16 @@
 ###2.3.1选择排序  
 
     public static void xz(int []arr){
-        for(int i=0;i<arr.length-1;i++){
-            for(int j=i+1;j<arr.length;j++){
-                if(arr[i]>arr[j]){
-                    int temp=arr[i];
-                    arr[i]=arr[j];
-                    arr[j]=temp;
+        for(int i = 0;i < arr.length - 1;i++){
+            for(int j = i + 1;j<arr.length;j++){
+                if(arr[i] > arr[j]){
+                    int temp = arr[i];
+                    arr[i] = arr[j];
+                    arr[j] = temp;
                 }
             }
         }
-        for(int i=0;i<arr.length;i++){
+        for(int i = 0;i < arr.length;i++){
             System.out.print(arr[i]+",");
         }
     }
@@ -37,16 +37,16 @@
 ###2.3.2冒泡排序  
 
     public static void mp(int[]arr){
-        for(int j=0;j<arr.length-1;j++){
-            for(int i=0;i<arr.length-1-j;i++){
-                if(arr[i]>arr[i+1]){
-                    int temp=arr[i];
-                    arr[i]=arr[i+1];
-                    arr[i+1]=temp;
+        for(int j = 0;j < arr.length-1;j++){
+            for(int i = 0;i < arr.length-1-j;i++){
+                if(arr[i] > arr[i+1]){
+                    int temp = arr[i];
+                    arr[i] = arr[i+1];
+                    arr[i+1] = temp;
                 }
             }
         }
-        for(int i=0;i<arr.length;i++){
+        for(int i = 0;i < arr.length;i++){
         System.out.print(arr[i]+",");
         }
     }
@@ -56,22 +56,22 @@ j是控制比较的轮数,由于把最大值找到了,就可以少比较一轮
 适用于排好序的数组,检索目标数所在的位置  
 
     public static int half(int[]arr,int target){
-        int min=0;
-        int max=arr.length-1;
-        int mid=(min+max)/2;
+        int min = 0;
+        int max = arr.length-1;
+        int mid = (min+max)/2;
         while(true){
             if(target==arr[mid]){
                 return mid;
             }
-            if(target>arr[mid]){
+            if(target > arr[mid]){
                 min=mid+1;
                 mid=(min+max)/2;
             }
-            if(target<arr[mid]){
+            if(target < arr[mid]){
                 max=mid-1;
                 mid=(min+max)/2;
             }
-            if(min>max){
+            if(min > max){
                 break;
             }
         }
