--- a/2.数组.md
+++ b/2.数组.md
@@ -37,8 +37,8 @@
 ###2.3.2冒泡排序  
 
     public static void mp(int[]arr){
-        for(int j = 0;j < arr.length-1;j++){
-            for(int i = 0;i < arr.length-1-j;i++){
+        for(int j = 0;j < arr.length - 1;j++){
+            for(int i = 0;i < arr.length - 1 - j;i++){
                 if(arr[i] > arr[i+1]){
                     int temp = arr[i];
                     arr[i] = arr[i+1];
@@ -57,25 +57,25 @@ j是控制比较的轮数,由于把最大值找到了,就可以少比较一轮
 
     public static int half(int[]arr,int target){
         int min = 0;
-        int max = arr.length-1;
-        int mid = (min+max)/2;
+        int max = arr.length - 1;
+        int mid = (min + max) / 2;
         while(true){
             if(target==arr[mid]){
                 return mid;
             }
             if(target > arr[mid]){
-                min=mid+1;
-                mid=(min+max)/2;
+                min=mid + 1;
+                mid=(min + max) / 2;
             }
             if(target < arr[mid]){
-                max=mid-1;
-                mid=(min+max)/2;
+                max = mid - 1;
+                mid = (min + max) / 2;
             }
             if(min > max){
-                break;
+                break ;
             }
         }
-        return -1;
+        return - 1;
     }
 设置三个数min,mid,max,让目标数字与数组中间的数进行比较  
 如果目标数大于数组中间的数字,就让min变成mid+1,然后继续寻找,直到找到为止,得到一个返回值  
