--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -18,10 +18,10 @@
         }
     }
 
-封装的步骤:  
+###4.1.1封装的步骤:  
 1.使用private修饰需要被封装的属性.  
 2.提供公共的方法设置或者获取该私有的成员属性.  
-封装的好处:  
+###4.1.2封装的好处:  
 1.提高数据的安全性.  
 2.操作简单.  
 3.隐藏了实现.  
@@ -36,7 +36,7 @@
 私有    |   private    | √  |  x |  x |  x    
 
 ##4.2继承
-继承的格式:  
+###4.2.1继承的格式:  
 class 类名1 extends 类名2{
 }
 例子:
@@ -80,11 +80,12 @@ class 类名1 extends 类名2{
 调用父类构造方法  
 调用父类成员方法  
 返回Test2@1de256f  
-继承要注意的事项:  
+###4.2.2继承要注意的事项:  
 1. 千万不要为了减少重复代码而去继承,只有真正存在着继承关系的时候才去继承.
 2. 父类私有的成员不能被继承.
 3. 父类的构造函数不能被继承.
 4. 创建子类对象时默认会先调用父类无参的构造函数.
 5. 继承并不只是扩展父类的功能,还可以重写父类的成员方法.  
-重写(也可称为覆盖)是在子类中将父类的成员方法的名称保留,重写成员方法的实现内容,更改成员方法的存储权限(只能**从小到大**进行修改,如把protect改为public),或者修改成员方法的返回值类型.继承中有一种特殊的重写方式,子类与父类的成员方法返回值,方法名称,参数类型,及个数完全相同,**唯一不同的是方法实现内容**,这种重写方式被称为重构.  
+**PS**:重写(也可称为覆盖)是在子类中将父类的成员方法的名称保留,重写成员方法的实现内容,更改成员方法的存储权限(只能**从小到大**进行修改,如把protect改为public),或者修改成员方法的返回值类型.继承中有一种特殊的重写方式,子类与父类的成员方法返回值,方法名称,参数类型,及个数完全相同,**唯一不同的是方法实现内容**,这种重写方式被称为重构.  
+
 ##4.3多态
