--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -95,18 +95,17 @@ class 类名1 extends 类名2{
 5. 继承中有一种特殊的重写方式,子类与父类的成员方法返回值,方法名称,参数类型,及个数完全相同,**唯一不同的是方法实现内容**,这种重写方式被称为重构.  
 
 ###4.2.4super关键字:
-super关键字代表了父类空间的引用.  
-super关键字的作用:  
+####super关键字的作用:  
 1. 子父类存在同名的成员时,在子类中默认是访问子类的成员,可以通过super关键字指定访问父类的成员.  
 2. 创建子类对象时,默认会先调用父类无参的构造方法,可以通过super关键字指定调用父类的构造方法.  
-super关键字调用父类构造方法的注意事项:  
+####super关键字调用父类构造方法的注意事项:  
 1. 如果在子类的构造方法上没有指定调用父类的构造方法,那么JAVA编译器会在子类的构造方法上面加一个super();语句.  
 2. super关键字调用父类的构造函数时,该语句必须是子类构造函数的**第一个**语句.  
 3. super与this关键字不能同时出现在同一个构造函数中**调用其他构造函数**.因为两个语句都需要是第一个语句.  
-super关键字与this关键字的区别:  
+####super关键字与this关键字的区别:  
 1. 代表的事物不一致:  
-1. super关键字代表的是父类空间的引用.  
-2. this关键字代表的是所属函数的调用者对象.  
+super关键字代表的是父类空间的引用.  
+ this关键字代表的是所属函数的调用者对象.  
 2. 使用前提不一致:  
 super关键字必须要有继承关系才能使用.  
 this关键字不需要存在继承关系也可以使用.  
