--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -115,4 +115,52 @@ this关键字不需要存在继承关系也可以使用.
 super关键字是调用父类的构造函数.  
 this关键字是调用本类的构造函数.  
 
-##4.3多态
+##4.3抽象类
+
+    public class l {
+        public static void main(String arg[]){
+            Dog d = new Dog("二狗","灰");
+            d.run();
+            Fish f=new Fish("带鱼","红");
+            f.run();
+        }
+    }
+    abstract class  Animal{         //不能创建Animal类对象
+        String name;
+        String color;
+        public  Animal(String name,String color){
+            this.name = name;
+            this.color = color;
+        }
+        public abstract void run();//只是声明
+    	
+    }
+    class Fish extends Animal{
+        public Fish(String name,String color){
+            super(name,color);
+        }
+        public void run(){         //run方法的实现
+            System.out.println(name + "游啊游");
+        }
+    }
+    class Dog extends Animal{
+        public Dog(String name,String color){
+            super(name,color);
+        }
+        public void run(){         //run方法的实现
+            System.out.println(name + "跑的快");
+        }
+    }
+###4.3.1抽象类的好处
+在描述一类事物时,这种事物存在某种行为,但是不具体,就可以抽取这种行为进行声明,而不去实现这种行为.这样通过用抽象类就可以强制要求子类一定要实现指定的方法.  
+
+###4.3.2抽象类要注意的细节:
+
+1. 如果一个函数没有方法体,那么该函数必须要使用abstract修饰,把该函数修饰成抽象的函数.
+2. 如果一个类出现了抽象的函数,那么该类也必须使用abstract修饰.
+3. 如果一个非抽象类继承了抽象类,那么必须要把抽象类的所有抽象方法全部实现.
+4. 抽象类可以存在非抽象的方法,也可以存在抽象的方法.
+5. 抽象类可以不存在抽象方法的.
+6. 抽象类是不能创建对象的.原因:抽象类存在抽象方法.如果让抽象类创建对象的话,那么使用抽象的对象调用抽象方法是没有任何意义的.即使没有抽象方法,也不能创建对象.  
+
+##4.4多态
