--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -151,6 +151,8 @@ this关键字是调用本类的构造函数.
             System.out.println(name + "跑的快");
         }
     }
+输出:二狗跑的快    带鱼游啊游  
+
 ###4.3.1抽象类的好处
 在描述一类事物时,这种事物存在某种行为,但是不具体,就可以抽取这种行为进行声明,而不去实现这种行为.这样通过用抽象类就可以强制要求子类一定要实现指定的方法.  
 
@@ -162,5 +164,10 @@ this关键字是调用本类的构造函数.
 4. 抽象类可以存在非抽象的方法,也可以存在抽象的方法.
 5. 抽象类可以不存在抽象方法的.
 6. 抽象类是不能创建对象的.原因:抽象类存在抽象方法.如果让抽象类创建对象的话,那么使用抽象的对象调用抽象方法是没有任何意义的.即使没有抽象方法,也不能创建对象.  
+
+###4.3.4abstract不能与以下关键字共同修饰一个方法
+1. abstract不能与private共同修饰一个方法.继承的时候,private修饰方法不可见.  
+2. abstract不能与static共同修饰一个方法.用static修饰,可以通过类名.方法()进行调用,但是方法抽象,没有意义.
+3. abstract不能与final共同修饰一个方法.final修饰,不允许进行重写.  
 
 ##4.4多态
