--- a/5.值交换.md
+++ b/5.值交换.md
@@ -1,7 +1,6 @@
 #5.1值交换  
 
     public class l {
-    
         public static void main(String arg[]){
             int a = 5;
             int b = 3;
@@ -15,3 +14,7 @@
             System.out.println("局部函数a="+a+"b="+b);
         }
     }
+输出:局部函数a=3 b=5;a=5 b=3  
+重点:
+1. 形式参数是数据所属函数的局部变量.
+2. 不同函数的局部变量与局部变量是相互独立,没有任何的关系.  
