--- a/5.值交换.md
+++ b/5.值交换.md
@@ -1,20 +1,42 @@
 #5.1值交换  
-
+##5.1.1传递值
     public class l {
         public static void main(String arg[]){
             int a = 5;
             int b = 3;
-            changevalue(a,b);
-            System.out.println("a="+a+"b="+b);
+            changeValue(a,b);
+            System.out.println("交换之后a="+a+"b="+b);
         }
-        public static void changevalue(int a,int b){
+        public static void changeValue(int a,int b){
             int temp = a;
             a=b;
             b=temp;
-            System.out.println("局部函数a="+a+"b="+b);
+            System.out.println("方法内部交换后a="+a+"b="+b);
         }
     }
-输出:局部函数a=3 b=5;a=5 b=3  
-重点:
-1. 形式参数是数据所属函数的局部变量.
+输出:方法内部交换后a=3 b=5;交换之后a=5 b=3  
+重点:  
+1. 形式参数是数据所属函数的局部变量.  
 2. 不同函数的局部变量与局部变量是相互独立,没有任何的关系.  
+
+##5.1.2传递地址  
+
+    import java.util.*;
+    public class l {
+            
+        public static void main(String arg[]){
+            int[]arr = {22,2,88};
+            changeArr(arr,0,1);
+            System.out.println("数组交换后"+Arrays.toString(arr));
+        }
+        
+        public static void changeArr(int[] arr,int index1,int index2){
+            int temp = arr[index1];
+            arr[index1] = arr[index2];
+            arr[index2] = temp;
+        }
+    }
+注意:  
+1. 这两个函数中的arr是不同的.
+2. arr这两个不同的变量操作了相同的对象,所以才导致修改成功.
+3. 如果是不同的引用类型变量操作同一个对象,那么肯定会影响到结果.  
