--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -170,4 +170,48 @@ this关键字是调用本类的构造函数.
 2. abstract不能与static共同修饰一个方法.用static修饰,可以通过类名.方法()进行调用,但是方法抽象,没有意义.
 3. abstract不能与final共同修饰一个方法.final修饰,不允许进行重写.  
 
-##4.4多态
+##4.4接口
+
+    public class l {
+        public static void main(String arg[]){
+            EPencial ep = new EPencial("红色笔");
+            System.out.println("我有"+ep.name2);
+            ep.write();
+            ep.remove();	
+        }
+    }
+    class Pencial{
+        String name;
+        public Pencial(String name){
+            this.name = name;
+        }
+        public void write(){
+            System.out.println(name+"写啊写");
+        }
+    }
+    interface eareser{     //接口
+        String name2 = "橡皮";
+        public void remove();   //只声明方法
+    }
+    class EPencial extends Pencial implements eareser{
+        public EPencial(String name){
+            super(name);
+        }
+        public void remove(){      //方法实现
+            System.out.println("橡皮擦擦擦");
+        }
+    }
+###4.4.1实现接口的格式
+class 类名 implements 接口  
+class 类名 extends 父类 implements 接口  
+
+###4.4.2接口要注意的事项:  
+1. 接口是一个特殊的类.
+2. 接口的成员变量默认的修饰符为:public static final .也就是说接口中的成员变量都是常量.
+3. 接口中的方法都是抽象的方法,默认的修饰符为:public abstract.
+4. 接口不能创建对象.
+5. 接口是没有构造方法的.
+6. 接口是给类去实现使用的,非抽象类实现一个接口的时候,必须要把接口中所有方法全部实现.  
+
+
+##4.5多态
