--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -203,8 +203,9 @@ this关键字是调用本类的构造函数.
         }
     }
 ###4.4.1实现接口的格式
-class 类名 implements 接口  
-class 类名 extends 父类 implements 接口  
+1. class 类名 implements 接口  
+2. class 类名 extends 父类 implements 接口1,接口2  
+
 
 ###4.4.2接口要注意的事项:  
 1. 接口是一个特殊的类.
@@ -214,5 +215,118 @@ class 类名 extends 父类 implements 接口
 5. 接口是没有构造方法的.
 6. 接口是给类去实现使用的,非抽象类实现一个接口的时候,必须要把接口中所有方法全部实现.  
 
+###4.4.3类与接口的关系:
+类与接口之间的关系:实现关系.  
+类与接口之间的注意事项:  
+1. 非抽象类实现一个接口时,必须把接口的所有方法都实现.
+2. 抽象类实现一个接口时,可以实现也可以不实现接口中的方法.  
+3. 一个类可以实现多个接口.  
 
 ##4.5多态
+
+    public class l {
+        public static void main(String arg[]){
+            Animal a = new Dog("二哈");
+            a.run();
+            Animal b = new Fish("带鱼");
+            b.run();
+        }
+    }
+    abstract class Animal {
+        String name;
+        public abstract void run();
+        public Animal(String name){
+            this.name = name;
+        }
+    }
+    class Dog extends Animal {
+        public Dog(String name) {
+            super(name);
+        }
+        public void run() {
+            System.out.println(name+"四条腿跑");
+        }
+        public void bite() {   //不能通过a.bite()进行调用,因为父类没有这个成员函数
+            System.out.println(name+"咬人了!");
+        }
+    }
+    class Fish extends Animal {
+        public Fish(String name) {
+            super(name);
+        }
+        public void run(){
+            System.out.println(name+"游啊游");
+        }
+    }
+输出:二哈四条腿跑 带鱼游啊游  
+多态:一个对象具备多种形态.(父类的引用类型变量指向了子类对象或者是接口的引用类型变量指向了接口实现类的对象)  
+多态的前提:必须存在继承或者接口关系.  
+动物 A = new Dog();  
+多态要注意的细节:  
+1. 多态情况下,不能访问子类的特有成员.
+2. 多态情况下,子父类存在同名的成员变量时,访问的是父类的成员变量.
+3. 多态情况下,子父类存在同名的非静态的成员函数时,访问的是子类的成员函数.
+4. 多态情况下,子父类存在同名的静态的成员函数时,访问的是父类的成员变量.
+5. 多态情况下,子父类存在同名的成员变量或者成员函数时,访问的是父类的成员.只有当子父类存在同名的非静态成员函数时,访问的是子类的成员函数.  
+
+
+    public class l {
+        public static void main(String arg[]){
+            Circle c = new Circle(2);
+            print(c);
+            Rectangle r = new Rectangle(4,5);
+            print(r);
+            MyShape k = Creat(0);             //可以接受一个类
+            k.getArea();
+        }
+        public static void print(MyShape a) { //定义的一个可以接受任何类型的函数,显示图形
+            a.getArea();                      //的面积和周长
+            a.getLength(); 
+        }
+        public static MyShape Creat(int i) {  //定义的函数可以返回任意类型的图形对象
+            if(i==0) {
+                return new Circle(4.2);
+            }
+            else {
+                return new Rectangle(5,6);
+            }
+        }
+    }  
+    abstract class MyShape {                        //抽象类
+        public abstract void getArea();
+        public abstract void getLength();
+    }
+    class Circle extends MyShape {
+        public double r;
+        public static final double PI = 3.14;  
+        public Circle(double r) {                    //构造函数
+            this.r = r;
+        }
+        public void getArea() {
+            System.out.println("圆面积="+r*r*PI);
+        }
+        public void getLength() {
+            System.out.println("圆周长="+2*PI*r);
+        }
+    }
+    class Rectangle extends MyShape {
+        public double wide;
+        public double high;
+        public Rectangle(double wide,double high) {  //构造函数
+            this.wide = wide;
+            this.high = high;
+        }
+        public void getArea() {
+            System.out.println("矩形面积="+wide*high);
+        }
+        public void getLength() {
+            System.out.println("矩形周长="+2*(wide+high));
+        }
+    }
+输出:  
+圆面积=12.56  
+圆周长=12.56  
+矩形面积=20.0  
+矩形周长=18.0  
+圆面积=55.3896  
+多态可以运用,有不同类型的返回值.如上例,MyShape类型的成员方法可以返回Circle或者Rectangle类型的变量,声明一个MyShape类型变量接收这个值,可以进行成员方法的调用.  
