--- a/5.值交换.md
+++ b/5.值交换.md
@@ -1,5 +1,6 @@
-#5.1值交换  
-##5.1.1传递值
+
+##5.1值交换  
+###5.1.1传递值
     public class l {
         public static void main(String arg[]){
             int a = 5;
@@ -19,7 +20,7 @@
 1. 形式参数是数据所属函数的局部变量.  
 2. 不同函数的局部变量与局部变量是相互独立,没有任何的关系.  
 
-##5.1.2传递地址  
+###5.1.2传递地址  
 
     import java.util.*;
     public class l {
@@ -40,3 +41,62 @@
 1. 这两个函数中的arr是不同的.  
 2. arr这两个不同的变量操作了相同的对象,所以才导致修改成功.  
 3. 如果是不同的引用类型变量操作同一个对象,那么肯定会影响到结果.  
+##5.2强制类型转换  
+###5.2.1基本数据类型的转换  
+小数据类型----->大数据类型 自动类型转换  
+大数据类型----->小数据类型 强制类型转换: 小数据类型 变量名 = (小数据类型)大数据类型;  
+###5.2.2引用数据类型的转换  
+小数据类型----->大数据类型 自动类型转换  
+大数据类型----->小数据类型 强制类型转换  
+
+
+    public class l {
+        public static void main(String arg[]){
+            Animal a = new Dog("二哈");
+            a.run();
+            Dog d = (Dog)a;   //强制类型转换  大转小  把Animal类型转为Dog
+            d.bite();
+            Fish f = new Fish("带鱼");
+            print(f);
+            Dog g = new Dog("柴犬");
+            print(g);
+        }
+        public static void print(Animal s) {  //可以接受任意对象,调用他们特有的成员函数.
+            if(s instanceof Dog) {
+                ((Dog) s).bite();
+            }
+            else if (s instanceof Fish) {
+                ((Fish) s).eat();
+            }
+        }
+    }
+    abstract class Animal {
+        String name;
+        public Animal(String name) {
+            this.name = name;
+        }
+        public abstract void run();
+    }
+    class Dog extends Animal {
+        public Dog(String name) {
+            super(name);
+        }
+        public void run() {
+            System.out.println(name+"跑啊跑");
+        }
+        public void bite() {
+            System.out.println(name+"咬人啦");
+        }
+    }
+    class Fish extends Animal {
+        public Fish(String name) {
+            super(name);
+        }
+        public void run() {
+            System.out.println(name+"游啊游");
+        }
+        public void eat() {
+            System.out.println(name+"吃虾米");
+        }
+    }
+
