--- a/5.值交换.md
+++ b/5.值交换.md
@@ -61,11 +61,11 @@
             Dog g = new Dog("柴犬");
             print(g);
         }
-        public static void print(Animal s) {  //可以接受任意对象,调用他们特有的成员函数.
+        public static void print(Animal s) { //该方法可以接受任意对象,调用他们特有的成员函数.
             if(s instanceof Dog) {
                 ((Dog) s).bite();
             }
-            else if (s instanceof Fish) {
+            else if (s instanceof Fish) {    //instanceof关键字可以判断该变量属于哪个类
                 ((Fish) s).eat();
             }
         }
@@ -84,7 +84,7 @@
         public void run() {
             System.out.println(name+"跑啊跑");
         }
-        public void bite() {
+        public void bite() {    //Dog类特有的成员方法
             System.out.println(name+"咬人啦");
         }
     }
@@ -95,8 +95,13 @@
         public void run() {
             System.out.println(name+"游啊游");
         }
-        public void eat() {
+        public void eat() {     //Fish类特有的成员方法
             System.out.println(name+"吃虾米");
         }
     }
+输出:  
+二哈跑啊跑  
+二哈咬人啦  
+带鱼吃虾米  
+柴犬咬人啦  
 
