--- a/5.值交换.md
+++ b/5.值交换.md
@@ -63,10 +63,12 @@
         }
         public static void print(Animal s) { //该方法可以接受任意对象,调用他们特有的成员函数.
             if(s instanceof Dog) {
-                ((Dog) s).bite();
+                Dog d = (Dog)s;
+                d.bite();
             }
             else if (s instanceof Fish) {    //instanceof关键字可以判断该变量属于哪个类
-                ((Fish) s).eat();
+                Fish f = (Fish)s;
+                f.eat();
             }
         }
     }
