--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -259,10 +259,11 @@ this关键字是调用本类的构造函数.
         }
     }
 输出:二哈四条腿跑 带鱼游啊游  
+###4.5.1多态  
 多态:一个对象具备多种形态.(父类的引用类型变量指向了子类对象或者是接口的引用类型变量指向了接口实现类的对象)  
 多态的前提:必须存在继承或者接口关系.  
 动物 A = new Dog();  
-多态要注意的细节:  
+###4.5.2多态要注意的细节:  
 1. 多态情况下,不能访问子类的特有成员.  
 2. 多态情况下,子父类存在同名的成员变量时,访问的是父类的成员变量.  
 3. 多态情况下,子父类存在同名的非静态的成员函数时,访问的是子类的成员函数.  
@@ -330,3 +331,26 @@ this关键字是调用本类的构造函数.
 矩形周长=18.0  
 圆面积=55.3896  
 多态可以运用,有不同类型的返回值.如上例,MyShape类型的成员方法可以返回Circle或者Rectangle类型的变量,声明一个MyShape类型变量接收这个值,可以进行成员方法的调用.  
+###4.5.3接口关系下的多态 
+
+    public class l {
+    public static void main(String arg[]){
+        Jk a = new people("小明");   //接口引用类型的变量指向接口实现类的变量
+        a.print();
+        		
+        }
+    	
+    }
+    interface Jk {              //接口
+        public void print();
+    }
+    class people implements Jk {  //实现类
+        String name;
+        public  people (String name) {
+            this.name = name;
+        }
+        public void print() {
+            System.out.println(name+"哈哈哈");
+        }
+    }
+全部调用接口实现类的方法.  
