--- a/4.封装,继承,多态.md
+++ b/4.封装,继承,多态.md
@@ -331,11 +331,12 @@ this关键字是调用本类的构造函数.
 矩形周长=18.0  
 圆面积=55.3896  
 多态可以运用,有不同类型的返回值.如上例,MyShape类型的成员方法可以返回Circle或者Rectangle类型的变量,声明一个MyShape类型变量接收这个值,可以进行成员方法的调用.  
-###4.5.3接口关系下的多态 
+
+###4.5.3接口关系下的多态  
 
     public class l {
     public static void main(String arg[]){
-        Jk a = new people("小明");   //接口引用类型的变量指向接口实现类的变量
+        Jk a = new People("小明");   //接口引用类型的变量指向接口实现类的变量
         a.print();
         		
         }
@@ -344,7 +345,7 @@ this关键字是调用本类的构造函数.
     interface Jk {              //接口
         public void print();
     }
-    class people implements Jk {  //实现类
+    class People implements Jk {  //实现类
         String name;
         public  people (String name) {
             this.name = name;
@@ -353,4 +354,5 @@ this关键字是调用本类的构造函数.
             System.out.println(name+"哈哈哈");
         }
     }
-全部调用接口实现类的方法.  
+输出:小明哈哈哈  
+全部调用接口实现类的方法.本例中也就是People中的方法.  
