--- a/6.内部类.md
+++ b/6.内部类.md
@@ -1,15 +1,40 @@
 ##6.1成员内部类  
 
     public class l {
-	public static void main(String arg[]) {
-		Outer k = new Outer();//创建一个外部类对象
-		Outer.Inner a = new Outer().new Inner();//创建一个内部类对象
-		a.print();
-		a.print2();
-		a.print3();
-		k.test();
-	}
-}
+        public static void main(String arg[]) {
+            Outer k = new Outer();//创建一个外部类对象
+            Outer.Inner a = new Outer().new Inner();//创建一个内部类对象
+            a.print();
+            a.print2();
+            a.print3();
+            k.test();
+        }
+    }
+    class Outer {
+        int x = 10;
+        int i = 10000;
+        class Inner {
+            int i = 20;
+            public void print() {
+                System.out.println("成员内部类i="+i);
+            }
+            public void print2() {
+                System.out.println("内部类访问外部类的成员x="+x);
+            }
+            public void print3() {
+                System.out.println("访问外部类同名成员="+Outer.this.i);
+            }
+        }
+        public void test() {  //在外部类的方法中创建了内部类对象,进行访问
+            Inner inner = new Inner();
+            System.out.println("在外部类方法中访问i="+inner.i);
+        }
+    }
+输出:  
+成员内部类i=20  
+内部类访问外部类的成员x=10  
+访问外部类同名成员=10000  
+在外部类方法中访问i=20  
 
 成员内部类的访问方式:  
 方式一:在外部类提供一个方法创建内部类的对象进行访问.  
