--- a/6.内部类.md
+++ b/6.内部类.md
@@ -44,5 +44,76 @@
 
 1. 如果外部类和内部类存在同名的成员变量时,在内部类中默认访问的是内部类成员变量.可以通过"外部类.this.成员变量名"指定访问内部类的成员.  
 2. 私有的成员内部类只能在外部类提供一个方法创建内部类对象进行访问,不能在其他类创建对象.  
-3. 成员内部类一旦出现了静态的成员,那么该类也必须使用static修饰.
+3. 成员内部类一旦出现了静态的成员,那么该类也必须使用static修饰.  
+
+##6.2局部内部类  
+局部内部类是指在类的方法中定义的内部类  
+
+    public class l {
+        public static void main(String arg[]) {
+        Outer outer = new Outer();
+        outer.test();
+        }
+    }
+    class Outer {
+        public void test() {
+            final int y = 100;  //被内部类访问时要加上final关键字
+            class Inner {
+                int x = 10;
+                public void print() {
+                    System.out.println("局部内部类的变量x="+x);
+                    System.out.println("访问局部变量y="+y);
+                }
+            }
+            Inner inner = new Inner();  //在方法内创建对象
+            inner.print();
+        }
+    }  
+
+如果一个内部类访问一个局部变量时,要在局部变量前加上final.  
+##6.3匿名内部类
+匿名内部类:没有类名的类就成为匿名内部类  
+匿名内部类的使用前提:必须存在着继承或者实现关系才可以  
+
+    public class l {
+    public static void main(String arg[]) {
+            Outer outer = new Outer();
+            outer.print();
+        }
+    }
+    abstract class Animal {
+        public abstract Animal run();
+        public abstract void sleep();
+    }
+    class Outer {
+        public void print() {
+            new Animal() {
+                public Animal run() {  //返回当前对象
+                    System.out.println("跑啊跑");
+                    return this;
+                }
+                public void sleep() {
+                    System.out.println("睡觉中");
+                }
+            }.run().sleep();  //通过run()返回一个对象,继续调用sleep()
+        }
+    }  
+匿名内部类一般用于实参  
+
+    public class l {
+        public static void main(String arg[]) {
+            test(new A(){    //创建一个实现类对象,作为实参传递
+                public void add(){
+                    System.out.println("调用成功");
+                }
+            });
+        }
+        public static void test(A a) {  //形参类型是一个接口类型
+            a.add();
+        }
+    }
+    interface A {
+        public void add();
+    }  
+
 
