--- a/7.异常.md
+++ b/7.异常.md
@@ -17,3 +17,11 @@
             System.out.println("getLocalizedMessage:" + loc);
         }
     }
+
+
+Throwable 常用的方法:  
+1. toString() 返回当前一场对象的完整类名  
+2. getMessage()返回的是创建throwable传入的字符串信息  
+3. printStackTrace() 打印异常的栈信息  
+
+
