--- a/7.异常.md
+++ b/7.异常.md
@@ -31,10 +31,69 @@ Throwable 常用的方法:
 ###7.2.1使用try..catch处理异常
 
 
+    public class l {
+        public static void main(String arg[]) {
+            A (4,0);
+        }
+        public static void A(int a ,int b) {
+            int c = 0;
+            try {
+            c = a / b;
+            }catch(ArithmeticException q) {  //捕获类型小
+                q.printStackTrace();
+                System.out.println("出错了"+q.toString());
+            }catch(Exception e) {    //要放在最后,它捕获类型大
+                e.printStackTrace();
+                System.out.println("捕获范围大");
+            }
+            System.out.println("c="+c);
+        }
+    }
+
 捕获处理要注意的细节:  
 1. 如果try块中代码除了异常经过了处理之后,那么try-catch块外面的代码可以正常执行.  
 2. 如果try块中出了异常的代码,那么在try块中出现异常代码后面的代码是不会执行了.  
 3. 一个try块后面是可以跟有多个catch块的,也就是一个try块可以捕获多种异常的类型.  
 4. 一个try块可以捕获多种异常的类型,但是捕获的异常类型必须从小到大进行捕获,否则编译报错.  
+
+###7.2.2抛出异常
+
+    public class l {
+        public static void main(String arg[]) {
+            try{
+                int[] arr = null;
+                A(4,2,arr);
+            }catch(Exception e) {
+                System.out.println("出现了异常");
+                e.printStackTrace();
+            }
+        }
+        public static void A(int a ,int b,int[] arr)throws Exception,NullPointerException {
+            if(b==0) {                              //使用throws声明了抛出
+                throw new Exception();//抛出一个异常对象
+                //throw new NullPointerException(); 不能在一个情况同时抛出两个异常
+            }else if(arr ==null){
+                throw new NullPointerException();
+            }
+            int c = 0;
+            try {
+            c = a / b;
+            }catch(ArithmeticException q) {  
+                q.printStackTrace();
+                System.out.println("出错了"+q.toString());
+            }
+            System.out.println("c="+c);
+        }
+    }
+
+抛出处理要注意的细节:  
+1. 如果一个方法的内部抛出了一个异常对象,那么必须在方法上声明抛出.
+2. 如果调用了一个声明抛出异常的方法,那么调用者必须要处理异常.
+3. 如果一个方法内部抛出了一个异常对象,那么throw语句后面的代码都不会再执行了
+4. 在一种情况下,只能抛出一种异常类型对象.  
+throw与throws两个关键字区别:
+1. throw关键字是用于方法内部的,throws是用于方法声明.
+2. throw关键字是用于方法内部抛出一个异常对象的,thorws关键字是用于在方法声明上声明抛出的异常类型.
+3. throw关键字后面只能有一个异常对象,throws后面一次可以声明抛出多种类型的异常.
 
 
