--- a/7.异常.md
+++ b/7.异常.md
@@ -65,6 +65,7 @@ c=0
 ***
 ###7.2.2抛出异常
 
+
     public class l {
         public static void main(String arg[]) {
             try{
@@ -109,5 +110,30 @@ throw与throws两个关键字区别:
 1. throw关键字是用于方法内部的,throws是用于方法声明.
 2. throw关键字是用于方法内部抛出一个异常对象的,thorws关键字是用于在方法声明上声明抛出的异常类型.
 3. throw关键字后面只能有一个异常对象,throws后面一次可以声明抛出多种类型的异常.
+***
+###7.3自定义异常  
 
 
+    public class l {
+        public static void main(String arg[]) {
+        	String ip = null;
+        	try {                                  //异常一旦抛出,必须要处理
+        		QQ(ip);
+        	}catch(NoipException a){   
+        		a.printStackTrace();
+        		System.out.println("没有插上网线");
+        	}
+        }
+        public static void QQ(String ip)throws NoipException{ //需要用throws声明
+        	if(ip==null) {
+        		throw new NoipException("没插网线");
+        	}
+        }
+    }
+    class NoipException extends Exception {   //自定义异常类
+        public NoipException(String message){
+        super(message);       //使用父类构造方法
+        }
+    }
+
+自定义异常,即是继承Exception类,然后添加新东西.使用时和之前一样,在方法上要声明抛出.  
