--- a/7.异常.md
+++ b/7.异常.md
@@ -101,10 +101,15 @@ java.lang.NullPointerException
 	at l.main(l.java:5)  
 
 抛出处理要注意的细节:  
-1. 如果一个方法的内部抛出了一个异常对象,那么必须在方法上声明抛出.
-2. 如果调用了一个声明抛出异常的方法,那么调用者必须要处理异常.
+1. 如果一个方法的内部抛出了一个编译时异常对象,那么必须在方法上声明抛出.
+2. 如果调用了一个声明抛出编译时异常的方法,那么调用者必须要处理异常.
 3. 如果一个方法内部抛出了一个异常对象,那么throw语句后面的代码都不会再执行了
 4. 在一种情况下,只能抛出一种异常类型对象.  
+
+运行时异常:RuntimeException以及RuntimeException的子类都是属于运行时异常.  
+运行时异常:如果一个方法内部抛出了一个运行时异常,那么方法上可以声明,也可以不声明,调用者可处理也可以不处理.  
+编译时异常:除了运行时异常就是编译时异常.  
+编译时异常:如果一个方法内部抛出了一个编译时异常对象,那么方法上必须声明,调用者必须处理.  
 
 throw与throws两个关键字区别:
 1. throw关键字是用于方法内部的,throws是用于方法声明.
